# Zephyr-Embedded-ML-Scheduling-Benchmark

./: README.md
.west/: config
app/zephyr_ml_sched/phase1/: CMakeLists.txt  prj.conf
app/zephyr_ml_sched/phase1/results/: merged_config.xlsx  merged_trial.xlsx
app/zephyr_ml_sched/phase1/src/: main.c
app/zephyr_ml_sched/phase2/src/: main.cpp
app/zephyr_ml_sched/phase3/: CMakeLists.txt  prj.conf
app/zephyr_ml_sched/phase4/: CMakeLists.txt
app/zephyr_ml_sched/phase4/results/: merge_config.xlsx  merge_trials.xlsx
app/zephyr_ml_sched/phase4/results/configuration_1/: run_priority_baseline_no_deadline_1.txt  run_priority_baseline_no_deadline_2.txt  run_priority_baseline_no_deadline_3.txt  run_priority_baseline_no_deadline_4.txt  run_priority_baseline_no_deadline_5.txt  zephyr_config_summary.csv  zephyr_trial_summary.csv
app/zephyr_ml_sched/phase4/results/configuration_2/: run_equal_priority_baseline_no_deadline_1.txt  run_equal_priority_baseline_no_deadline_2.txt  run_equal_priority_baseline_no_deadline_3.txt  run_equal_priority_baseline_no_deadline_4.txt  run_equal_priority_baseline_no_deadline_5.txt  zephyr_config_summary.csv  zephyr_trial_summary.csv
app/zephyr_ml_sched/phase4/results/configuration_3/: run_equal_priority_baseline_with_deadline_1.txt  run_equal_priority_baseline_with_deadline_2.txt  run_equal_priority_baseline_with_deadline_3.txt  run_equal_priority_baseline_with_deadline_5.txt  zephyr_config_summary.csv  zephyr_trial_summary.csv
app/zephyr_ml_sched/phase4/src/: main.cpp  output_handler.cpp
app/zephyr_ml_sched/phase5/: prj.conf
(+84 files in other folders)
